--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}{% block page_title %}{% endblock %}-NiceBlog{% endblock %}
 
 {% block head %}
 {{ super() }}
