--- a/app/templates/error/403.html
+++ b/app/templates/error/403.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block page_title %}服务器内部错误{% endblock %}
+{% block page_title %}权限不足{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
-    <h1>服务器内部错误</h1>
+    <h1>没有访问权限</h1>
 </div>
 {% endblock %}
