--- a/app/templates/error/404.html
+++ b/app/templates/error/404.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block page_title %}页面不存在{% endblock %}
+
+{% block page_content %}
+<div class="page-header">
+    <h1>页面不存在</h1>
+</div>
+{% endblock %}
