--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,13 +29,17 @@
                 {% if current_user.is_authenticated %}
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="{{ current_user.gravatar(size=18) }} ">
+                        <img class="img-circle" src="{{ current_user.gravatar(size=22) }} ">
                         {{ current_user.username }} <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
+                        <li><a href="">喜欢的文章</a></li>
+                        {% if current_user.is_administrator() %}
+                        <li><a href="">草稿</a></li>
+                        {% endif %}
+                        <li><a href="{{ url_for('main.user', username=current_user.username) }}">个人信息</a></li>
                         <li><a href="{{ url_for('auth.change_password') }}">修改密码</a></li>
                         <li><a href="{{ url_for('auth.logout') }}">退出登录</a></li>
-                        <li><a href="{{ url_for('main.user', username=current_user.username) }}">个人信息</a></li>
                     </ul>
                 </li>
                 {% if current_user.is_administrator() %}
@@ -60,6 +64,9 @@
     {% endfor %}
 
     {% block page_content %}{% endblock %}
+</div>
+<div class="container-fluid">
+    {% block create_blog_content %}{% endblock %}
 </div>
 {% endblock %}
 
