--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
+{% import "_macros.html" as macros %}
 
 {% block title %}{{ blog.title }}{% endblock %}
 {% block page_content %}
-<div class="page-content">
+<div>
     {% if current_user.is_administrator() %}<a href="{{ url_for('main.edit_blog', id=blog.id) }}">编辑</a>{% endif %}
     <h2>{{ blog.title }}</h2>
     <p>
@@ -14,14 +15,13 @@
         {% endif %}
     </p>
 </div>
-{% endblock %}
 
+{% include "_comments.html" %}
 
-<div class="blog-summary">
-    {% if blog.content_html %}
-    {{ blog.content_html | safe }}
-    {% else %}
-    {{ blog.content }}
-    {% endif %}
-
+{% if pagination %}
+<div class="col-md-7 pagination-comment">
+    {{ macros.pagination_widget(pagination, 'main.blog', id=blog.id) }}
 </div>
+{% endif %}
+
+{% endblock %}
