--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,13 +3,19 @@
 
 {% block page_title %}个人信息{% endblock %}
 {% block page_content %}
-    <div class="page-header">
+<div class="row">
+    <div class="col-md-3">
         <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=200) }}">
-        <div class="profile-header">
+    </div>
+    <div class="col-md-5">
+        <div class="form-group">
             <h1>{{ user.username }}</h1>
+        </div>
+        <div class="form-group">
             <h5><strong>注册邮箱：</strong>{{ user.email }}</h5>
             <h5><strong>注册时间：</strong>{{ moment(user.member_since).format('YYYY-MM-DD HH:mm:ss') }}</h5>
             <h5><strong>最后登录时间：</strong>{{ moment(user.last_seen).format('YYYY-MM-DD HH:mm:ss') }}</h5>
         </div>
     </div>
+</div>
 {% endblock %}
