--- a/app/templates/create_blog.html
+++ b/app/templates/create_blog.html
@@ -16,6 +16,9 @@
                     {{ form.title(class="form-control", placeholder=form.title.label.text) }}
                 </div>
                 <div class="form-group">
+                    {{ form.labels(class="form-control", placeholder=form.labels.label.text) }}
+                </div>
+                <div class="form-group">
                     {{ form.content(only_input=True, class="input-markdown,
                     form-control",placeholder=form.content.label.text, rows=20) }}
                 </div>
