--- a/app/templates/create_blog.html
+++ b/app/templates/create_blog.html
@@ -9,8 +9,10 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group text-right">
-                    {{ form.submit(class="btn btn-primary") }}
+                    {{ form.publish(class="btn btn-primary") }}
+                    {% if type=="create" %}
                     {{ form.save(class="btn btn-default") }}
+                    {% endif %}
                 </div>
                 <div class="form-group">
                     {{ form.title(class="form-control", placeholder=form.title.label.text) }}
@@ -18,9 +20,14 @@
                 <div class="form-group">
                     {{ form.labels(class="form-control", placeholder=form.labels.label.text) }}
                 </div>
+
+                <div class="form-group">
+                    {{ form.summary(class="form-control", placeholder=form.summary.label.text, rows=6) }}
+                </div>
+
                 <div class="form-group">
                     {{ form.content(only_input=True, class="input-markdown,
-                    form-control",placeholder=form.content.label.text, rows=20) }}
+                    form-control",placeholder=form.content.label.text, rows=40) }}
                 </div>
             </div>
             <div class="col-md-6">
