--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -3,7 +3,7 @@
     <li
     {% if not pagination.has_prev %} class="disabled"{% endif %}>
     <a href="{% if pagination.has_prev %}{{ url_for(endpoint, page=pagination.prev_num, **kwargs) }}{% else %}#{% endif %}">
-        &laquo;
+        上一页
     </a>
     </li>
     {% for p in pagination.iter_pages() %}
@@ -24,7 +24,7 @@
     <li
     {% if not pagination.has_next %} class="disabled"{% endif %}>
     <a href="{% if pagination.has_next %}{{ url_for(endpoint, page=pagination.next_num, **kwargs) }}{% else %}#{% endif %}">
-        &raquo;
+        下一页
     </a>
     </li>
 </ul>
